# rust_isa_platform

./: .env.example  Cargo.toml  Dockerfile  README.md  TECHNICAL_DESIGN.md  docker-compose.yml
.postman/: resources.yaml
.sqlx/: query-1647767ad0e2a957405943a7744855baf241f89a9dad619338874d02477c51dc.json  query-2acb2990954f737dd15d7d791f7aff5c81968f706b1dc44d4e53185a1e729504.json  query-47d59859f105995fa41952926bf4fee67d94ca53a7ce60f883f96f2529fe3474.json  query-4a233e16a2953f904ed4fc96838b3f323dad27f3b8c8336c24c88860bcd4b1c5.json  query-539017d6114db210c36a86746244af4bf96624a0aa6616fea9ab6b35876aa91b.json  query-55dbdffe8aec7fb05c94b12d7a2b25933f8e8874399a20780d49e00fa3cc909a.json  query-aa1974636c9030d2ad2ae9f992707688005ee1c4ba93a37122eb866285524f03.json  query-cb82db7dd68b77caf14faa09f6de3b0f2b05d098fea1dfd09975ca86f7ae456e.json  query-f865a33ae39e73ea5fe4531024622eff91b8ca06d9107a8ecdd7fdfed7655601.json
migrations/: 20260624152404_init_schema.sql  20260626035300_add_sessions_and_audit.sql  20260627142710_create_api_keys.sql  20260629040727_add_refresh_tokens.sql
postman/collections/IAM-PLATFORM/.resources/: definition.yaml
postman/collections/iam-tests/: http-localhost-3000-auth-login.request.yaml
postman/collections/iam-tests/.resources/: definition.yaml
postman/environments/: IAM Platform - Local.environment.yaml
src/: main.rs  middleware.rs  models.rs
src/handlers/: api_key.rs  auth.rs  mod.rs  org.rs  rbac.rs
tests/: api_tests.rs  db_tests.rs
